src/objects/Last_Synchronization_OPG__c.object
<CustomObject>
    <fields>
        <fullName>Cups_3rdParty__c</fullName>
        <label>Cups 3rd Party</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_All__c</fullName>
        <label>Cups All</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_Bucketize_3rdParty_Actual__c</fullName>
        <label>Cups Bucketize 3rdParty Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_Bucketize_All_Actual__c</fullName>
        <label>Cups Bucketize All Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_Bucketize_JDEOnly_Actual__c</fullName>
        <label>Cups Bucketize JDEOnly Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cups_JDEOnly__c</fullName>
        <label>Cups JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_All__c</fullName>
        <label>Large All</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_Bucketize_All_Actual__c</fullName>
        <label>Large Bucketize All Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_Bucketize_JDEOnly_Actual__c</fullName>
        <label>Large Bucketize JDEOnly Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Large_JDEOnly__c</fullName>
        <label>Large JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MCO__c</fullName>
        <label>MCO</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTTO_3rdParty__c</fullName>
        <label>MTTO 3rd Party</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTTO_All__c</fullName>
        <label>MTTO All</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MTTO_JDEOnly__c</fullName>
        <label>MTTO JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_3rdParty__c</fullName>
        <label>Small 3rd Party</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_All__c</fullName>
        <label>Small All</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_Bucketize_3rdParty_Actual__c</fullName>
        <label>Small Bucketize 3rdParty Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_Bucketize_All_Actual__c</fullName>
        <label>Small Bucketize All Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_Bucketize_JDEOnly_Actual__c</fullName>
        <label>Small Bucketize JDEOnly Actual</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Small_JDEOnly__c</fullName>
        <label>Small JDE Only</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Last Synchronization OPG</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Last_Sync_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Last Synchronization OPG Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Last Synchronization OPG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>